Version 8.11 (Unreleased)
-------------------------

Version.8.10
------------

- New and improved UI.
- Removed previously deprecated ``sentry celery`` command.
- Replaced the ``events`` queue with ``events.{preprocess,process,save}_event``.
- Added Danger (danger/danger) for monitoring various PR requirements.
- Enabled organization weekly report emails for all organizations.
- Add S3 filestore backend.
- ``SENTRY_FILESTORE`` deprecated and replaced with ``filestore.backend``
- ``SENTRY_FILESTORE_OPTIONS`` deprecated and replaced with ``filestore.options``
- Add watchOS support for cocoa interface.
- Fix support for internationalized Origins and raven-js.
- SSO is now enforced to access data within any org that has it set as a requirement.
- Improved rendering of weekly report email on mobile devices.

API Changes
~~~~~~~~~~~

- Add ``/organizations/{org}/repositories/`` endpoint.
- Add ``/organizations/{org}/repositories/{repo}/commits/`` endpoint.
- Add ``/projects/{org}/{project}/releases/{version}/commits/`` endpoint.
- SSO restrictions are now applied across session-based API authentication.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Repository`` model.
- Added ``Commit`` model.
- Added ``CommitAuthor`` model.
- Added ``ReleaseCommit`` model.
- Added index on ``GroupTagValue(project, key, value, last_seen)``.
- Dropped index on ``GroupTagValue(project, key, value)``.

Version 8.9
-----------

- Added support for Elixir.
- Improve performance for bulk deletions of Events and Groups.
- Fix rate limit logic for single organization mode.
- Added ``--no-repair`` flag for ``sentry upgrade`` for large installs.
- Fixed bug with merging counters yielding the wrong values.
- Require password confirmation when enabling/disabling 2fa.
- Collapse repeated frames in the stacktrace UI.
- Added weekly report emails behind feature flag.
- Rebrand Rules as Alerts / Alert Rules.
- Add frequency to Alerts.

Schema Changes
~~~~~~~~~~~~~~
