@@ -17,6 +17,7 @@ from django.utils.text import capfirst
 from django.utils.translation import ugettext_lazy as _
 
 from sentry import options
+from sentry.auth import password_validation
 from sentry.app import ratelimiter
 from sentry.constants import LANGUAGES
 from sentry.models import (
@@ -174,6 +175,11 @@ class RegistrationForm(forms.ModelForm):
             raise forms.ValidationError(_('An account is already registered with that email address.'))
         return value.lower()
 
+    def clean_password(self):
+        password = self.cleaned_data['password']
+        password_validation.validate_password(password)
+        return password
+
     def save(self, commit=True):
         user = super(RegistrationForm, self).save(commit=False)
         user.email = user.username
@@ -205,6 +211,11 @@ class RecoverPasswordForm(forms.Form):
 
 class ChangePasswordRecoverForm(forms.Form):
     password = forms.CharField(widget=forms.PasswordInput())
+
+    def clean_password(self):
+        password = self.cleaned_data['password']
+        password_validation.validate_password(password)
+        return password
 
 
 class EmailForm(forms.Form):
@@ -246,6 +257,7 @@ class AccountSettingsForm(forms.Form):
         label=_('New password'),
         widget=forms.PasswordInput(),
         required=False,
+        # help_text=password_validation.password_validators_help_text_html(),
     )
     password = forms.CharField(
         label=_('Current password'),
@@ -311,6 +323,11 @@ class AccountSettingsForm(forms.Form):
         ):
             raise forms.ValidationError('You must confirm your current password to make changes.')
         return value
+
+    def clean_new_password(self):
+        new_password = self.cleaned_data['new_password']
+        password_validation.validate_password(new_password)
+        return new_password
 
     def save(self, commit=True):
         if self.cleaned_data.get('new_password'):
